--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "start": "nodemon ./src/server.js"
   },
   "author": "psl",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "mysql": "^2.18.1"
+  }
 }
